[package]
name = "nnapi-sys"
version = "0.1.0"
edition = "2021"
keywords = ["android", "ndk", "ffi", "nnapi"]
categories = ["api-bindings", "science", "algorithms", "mathematics"]
description = "FFI to the Android NNAPI"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
