[package]
name = "nnapi-sys"
version = "0.1.1"
edition = "2021"
keywords = ["android", "ndk", "ffi", "nnapi"]
categories = ["api-bindings", "science", "algorithms", "mathematics"]
description = "FFI to the Android NNAPI"
license = "Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
