[package]
name = "nnapi"
version = "0.1.0"
edition = "2021"
keywords = ["android", "ndk", "neural-network", "nnapi", "machine-learning"]
categories = ["api-bindings", "science", "algorithms", "mathematics"]
readme = "../README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nnapi-sys = { path = "../nnapi-sys" }